# cookiecutter-prefect-template

./: .gitignore  .nens.toml  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml  test_hooks.py  test_smoke.py
.github/workflows/: nens-meta.yml
hooks/: post_gen_project.py  pre_gen_project.py
reinout-test/: .nens.toml  README.md  server.py
{{ cookiecutter.project_name }}/: .env  .gitignore  .nens.toml  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
{{ cookiecutter.project_name }}/.github/workflows/: docker.yml  nens-meta.yml
{{ cookiecutter.project_name }}/src/: flows.py  server.py  tasks.py  test_tasks.py
