[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1"
requires-python = ">= 3.10, <3.13"
# 3.13 is ok after fix to https://github.com/pydantic/pydantic-extra-types/issues/239

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.zest-releaser]
release = false

[tool.pyright]
# Out-of-the-box vscode support, provided you created .venv as mentioned in the readme.
venvPath = "."
venv = ".venv"
include = "src"
