[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1"
requires-python = ">= 3.11, <3.13"
# 3.13 is ok after fix to https://github.com/pydantic/pydantic-extra-types/issues/239
dependencies = [
    "prefect=={{ cookiecutter.prefect_version }}.*",
    "pre-commit",
    "pytest>=8.3.4",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.zest-releaser]
release = false

[tool.pyright]
# Out-of-the-box vscode support, provided you created .venv as mentioned in the readme.
venvPath = "."
venv = ".venv"
include = "src"

[tool.prefect]
home = "~/.prefect{{ cookiecutter.prefect_version }}"
